[gd_scene load_steps=4 format=3 uid="uid://cbncldbluvxkb"]

[ext_resource type="Texture2D" uid="uid://dngpky4rd31p1" path="res://assets/food/berries/berries.png" id="1_7hks0"]
[ext_resource type="Script" path="res://prefabs/berries/berries.gd" id="1_a2ksw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gri4q"]
size = Vector2(22.742, 21.8607)

[node name="berries" type="StaticBody2D"]
position = Vector2(1, -1)
scale = Vector2(1.92, 1.88)
script = ExtResource("1_a2ksw")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1.00006, 1.00001)
scale = Vector2(0.102762, 0.151721)
texture = ExtResource("1_7hks0")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-1, 1)
scale = Vector2(0.439944, 0.445021)
polygon = PackedVector2Array(64, -59.6, 64, 59, 59.6, 64, -59, 64, -64, 59.6, -64, -59.6, -59, -63.9, 59, -64)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-1, 1)
scale = Vector2(0.771919, 0.825162)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.620748, -0.244955)
rotation = 3.14159
scale = Vector2(4.25987, -4.09877)
shape = SubResource("RectangleShape2D_gri4q")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
